--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,5 +1,8 @@
 <%- if controller_name != 'sessions' %>
   <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <%= link_to "Sign Up with Facebook", user_omniauth_authorize_path(:facebook) %>
+  <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
