--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -6,6 +6,8 @@
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+<%= link_to "Sign Up with Facebook", user_omniauth_authorize_path(:facebook) %>
+
   <%= link_to "Sign up", new_registration_path(resource_name) %><br />
 <% end -%>
 
@@ -23,6 +25,7 @@
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
+  <%= link_to "Sign Up with Facebook", user_omniauth_authorize_path(:facebook) %>
     <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
   <% end -%>
 <% end -%>
