--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,26 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+
 </head>
+
 <body>
+  <% if user_signed_in?  %>
+  <nav class="w3-sidenav w3-red w3-card-2" style="width:200px">
+
+    <div class="sidenav-details">
+      <h1 color="white"><%= current_user.first_name %></h1>
+      <h2 class="btn w3-border-bottom w3-border-white" color="white" id="dashboardbtn">Dashboard</h2>
+      <h2 class="btn w3-border-bottom w3-border-white" color="white" id="basichealthbtn">Basic Health</h2>
+    </div>
+    <!-- <p class="btn" color="white">Advance Health</p> -->
+  </nav>
+
+<% end %>
+
+
+
 <nav class="navbar navbar-inverse">
   <div class="container">
     <div class="navbar-header">
@@ -40,7 +58,7 @@
 
 <div class="container">
   <% flash.each do |key, value| %>
-    <div class="alert alert-<%= key %>">  
+    <div class="alert alert-<%= key %>">
       <%= value %>
     </div>
   <% end %>
