--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,7 @@
 
+<div class=container id="formbody">
+  <%= render 'form' %>
 
-<%= render 'form' %>
-
-<%#= link_to 'Show', @user %>
-<%= link_to 'Back', dashboard_path(@user) %>
+  <%#= link_to 'Show', @user %>
+  <%= link_to 'Back', dashboard_path(@user) %>
+</div>
