--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <!-- <nav class="w3-sidenav w3-red w3-card-2" style="width:200px"> -->
 
     <!-- <div class="sidenav-details"> -->
-      <!-- <h1 color="white"><%= current_user.first_name %></h1> -->
+      <!-- <h1 color="white"><%#= current_user.first_name %></h1> -->
       <!-- <h2 class="btn w3-border-bottom w3-border-white" color="white" id="dashboardbtn">Dashboard</h2> -->
       <!-- <h2 class="btn w3-border-bottom w3-border-white" color="white" id="basichealthbtn">Basic Health</h2> -->
     <!-- </div> -->
@@ -23,10 +23,10 @@
   <!-- </nav> -->
 
   <% if user_signed_in?  %>
-    <nav class="w3-sidenav w3-collapse w3-card-2 w3-animate-left" style="width:200px; background-colour:d91e18;">
+    <nav class="w3-sidenav w3-collapse w3-red w3-card-2 w3-animate-left" style="width:200px;">
       <a href="javascript:void(0)" onclick="w3_close()" class="w3-closenav w3-large w3-hide-large">&times;</a>
-      <a href="#"><h2>Dashboard</h2></a>
-      <a href="#"><h2>Basic Health</h2></a>
+      <a href="#" id="dashboardbtn"><h2>Dashboard</h2></a>
+      <a href="#" id="basichealthbtn"><h2>Basic Health</h2></a>
     </nav>
   <% end %>
 
@@ -46,7 +46,7 @@
         <% if user_signed_in? %>
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-              Hi <%= current_user.first_name %>!
+              Hi <%#= current_user.first_name || current_user.name %>!
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu" role="menu">
