--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,12 @@
   <% if user_signed_in?  %>
     <nav class="w3-sidenav w3-collapse w3-red w3-card-2 w3-animate-left" style="width:200px;">
       <a href="javascript:void(0)" onclick="w3_close()" class="w3-closenav w3-large w3-hide-large">&times;</a>
-      <a href="#" id="dashboardbtn"><h2>Dashboard</h2></a>
-      <a href="#" id="basichealthbtn"><h2>Basic Health</h2></a>
+      <h2><a href="#" id="dashboardbtn"><h2>Dashboard</h2></a>
+      <h2><a href="#" id="basichealthbtn"><h2>Basic Health</h2></a>
+      <h2> <%= link_to 'Dashboard link', dashboard_path(@user) %></h2>
+      <h2> <%= link_to 'Health Record', health_record_path(@user) %></h2>
+      <h2> <%= link_to 'Daily Update', daily_update_path(@user) %></h2>
+      <h2> <%= link_to 'Health Upload', health_upload_path(@user) %></h2>
     </nav>
   <% end %>
 
