--- a/app/views/users/healthrecord.html.erb
+++ b/app/views/users/healthrecord.html.erb
@@ -1,8 +1,8 @@
-<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.11/css/jquery.dataTables.css">
+<!-- <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.11/css/jquery.dataTables.css">
 
 <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.11/js/jquery.dataTables.js"></script>
 
-
+ -->
 
 <div id="wrapper">
 <div class="container" id="dashboardbody">
