--- a/app/views/users/theme/_sidebar_menu.html.erb
+++ b/app/views/users/theme/_sidebar_menu.html.erb
@@ -1,26 +1,34 @@
 <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
 
   <div class="menu_section">
-    <h3>John Doe</h3>
+    <h3><%= current_user.first_name %> </h3>
     <br>
+
+
     <ul class="nav side-menu">
       <li class="active">
-        <a href="index.html"><i class="fa fa-tachometer"></i> Dashboard</a>
+        <%= link_to '<i class="fa fa-tachometer"></i> Dashboard'.html_safe, dashboard_path(@user) %>
+
       </li>
       <li>
-        <a href="health_upload.html"><i class="fa fa-upload"></i> Health Uploads</a>
+        <%= link_to '<i class="fa fa-upload"></i> Health Upload'.html_safe, health_upload_path(@user) %>
+
       </li>
       <li>
-        <a href="health_record.html"><i class="fa fa-folder-open"></i> Health Records</a>
+        <%= link_to '<i class="fa fa-folder-open"></i> Health Record'.html_safe, health_record_path(@user)%>
+
       </li>
       <li>
-        <a href="daily_update.html"><i class="fa fa-pencil-square-o"></i> Health Diary</a>
+        <%= link_to '<i class="fa fa-pencil-square-o"></i> Health Diary'.html_safe, daily_update_path(@user)%>
+        <!-- <a href="daily_update.html"><i class="fa fa-pencil-square-o"></i> Health Diary</a> -->
       </li>
       <li>
         <a><i class="fa fa-user"></i> Account <span class="fa fa-chevron-down"></span></a>
         <ul class="nav child_menu" style="display: none;">
           <li>
-            <a href="update_info.html">Update Info</a>
+            <!-- edit_user_path -->
+            <!-- <a href="update_info.html">Update Info</a> -->
+            <%= link_to 'Update Info', edit_user_path(@user)%>
           </li>
           <li>
             <a href="change_password.html">Change Password</a>
