--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user) do |f| %>
+<%= bootstrap_form_for(@user) do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -10,9 +10,9 @@
       </ul>
     </div>
   <% end %>
-<%= image_tag(@user.profile_pic_url) if @user.profile_pic? %>
+  <%= image_tag(@user.profile_pic_url, :size => "260x180") if @user.profile_pic?%>
   <div class="field">
-    Profile Picture <%= f.file_field :profile_pic %>
+    <%= f.file_field :profile_pic %>
   </div>
   <div class="field">
     <%= f.select :gender, User.genders.keys.to_a %>
@@ -40,7 +40,7 @@
   </div>
 
   <div class="field">
-    <<%= f.text_field :city %>
+    <%= f.text_field :city %>
   </div>
   <div class="field">
     <%= f.text_field :state %>
