--- a/app/views/users/healthrecord.html.erb
+++ b/app/views/users/healthrecord.html.erb
@@ -21,18 +21,16 @@
               </thead>
 
               <tbody>
-                <%if @user_health != nil  %>
                 <%  @user_health.all.each do |health_record| %>
                  <tr>
 
                    <td><%= health_record.record_name%> </td>
                    <td><%= health_record.created_at.strftime('%v')%> </td>
-                   <td><%= image_tag(health_record.file.url, :width => 100, :height => 100)%></td>
+                   <td><%= link_to image_tag(health_record.file.url, :width => 100, :height => 100), :target => "_blank"%></td>
 
 
                  </tr>
                  <% end %>
-               <% end %>
               </tbody>
             </table>
 
