--- a/app/views/users/healthupload.html.erb
+++ b/app/views/users/healthupload.html.erb
@@ -12,10 +12,10 @@
 
 
         health for blood:-
-       <%= nested_form_for @user do |f| %>
+       <%= nested_form_for @user, remote: true do |f| %>
 
         <div class="healthrecord">
-          <%= f.fields_for :healths do |task_form| %>
+          <%= f.fields_for :healths, remote: true do |task_form| %>
              <%= task_form.hidden_field :record_category_id, value: 1 %>
              <%= task_form.file_field :file %>
             <%= task_form.link_to_remove "Remove this record", class: "btn btn-danger"%>
